--- a/src/main/resources/assets/creativemagicmod/lang/en_us.json
+++ b/src/main/resources/assets/creativemagicmod/lang/en_us.json
@@ -1,6 +1,8 @@
 {
   "block.creativemagicmod.mana_crystal_ore": "Mana Crystal Ore",
 
+  "item.creativemagicmod.mana_crystal": "Mana Crystal (Pure)",
+
   "creativetab.magical_tab": "Creative Magic Spell",
 
   "message.creativemagicmod.expand_mana": "You feel your magic power resonate with the crystal... stronger and stronger",
