fixed block texture, renderable in game, focus on implementing the block entity tomorrow

--- a/src/main/resources/assets/creativemagicmod/lang/en_us.json
+++ b/src/main/resources/assets/creativemagicmod/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "block.creativemagicmod.mana_crystal_ore": "Mana Crystal Ore",
+  "block.creativemagicmod.magic_creation_station": "Magic Creation Station",
 
   "item.creativemagicmod.mana_crystal": "Mana Crystal (Pure)",
 
